--- a/ADS509_Team1_Final_Project.ipynb
+++ b/ADS509_Team1_Final_Project.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# ADS 509 Team 1 Final Project\n",
     "\n",
-    "## Tweets Classification on Crypto Currencies"
+    "## Tweets Classification on Cryptocurrencies"
    ]
   },
   {
