Update final with flask attempts

--- a/ADS509_Team1_Final_Project.ipynb
+++ b/ADS509_Team1_Final_Project.ipynb
@@ -3845,7 +3845,8 @@
    "source": [
     "# package installs\n",
     "# comment out once installed\n",
-    "#!pip install Flask"
+    "# !pip install Flask\n",
+    "# !pip install flask_bootstrap"
    ]
   },
   {
@@ -3858,7 +3859,9 @@
     "# package imports\n",
     "from flask import Flask, render_template, url_for, request\n",
     "import joblib\n",
-    "from joblib import dump, load"
+    "from joblib import dump, load\n",
+    "import flask_bootstrap\n",
+    "from flask_bootstrap import Bootstrap"
    ]
   },
   {
@@ -3869,20 +3872,20 @@
    "outputs": [],
    "source": [
     "# this is the flask app instance\n",
-    "app = Flask(__name__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "id": "df2b2eb9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# see https://flask.palletsprojects.com/en/2.2.x/quickstart/#a-minimal-application\n",
+    "# reference for intiating minimal flask application\n",
+    "app = Flask(__name__)\n",
+    "Bootstrap(app)\n",
+    "\n",
     "# app.route turns python function into a Flask view function \n",
+    "# this defines our \"home\" page that directs us to the page where we can enter a tweet\n",
     "@app.route('/')\n",
     "def question():\n",
-    "    return render_template('question.html')"
+    "    #return render_template('question.html')\n",
+    "    return '<h1>Hello!</h1>'\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "        app.run(debug=True)"
    ]
   },
   {
@@ -3894,7 +3897,9 @@
    "source": [
     "# let's create two documents\n",
     "# 1. will be our \"question\" page where we insert a tweet\n",
-    "# 2. will be our \"answer\" page where we get delivered the twitter handle it belongs to"
+    "# 2. will be our \"answer\" page where we get delivered the twitter handle it belongs to\n",
+    "# see https://towardsdatascience.com/develop-a-nlp-model-in-python-deploy-it-with-flask-step-by-step-744f3bdd7776\n",
+    "# for reference in how to set up model within flask"
    ]
   },
   {
@@ -4013,18 +4018,11 @@
    ],
    "source": [
     "# we'll save our SVM model including emojis\n",
-    "joblib.dump(predicted_svm, 'svm_model.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "id": "cba431e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "svm_model = open('svm_model.pkl', 'rb')\n",
-    "predicted_svm = joblib.load(svm_model)"
+    "# see https://towardsdatascience.com/develop-a-nlp-model-in-python-deploy-it-with-flask-step-by-step-744f3bdd7776\n",
+    "# for reference on how to set NLP model in flask\n",
+    "#joblib.dump(predicted_svm, 'svm_model.pkl')\n",
+    "#svm_model = open('svm_model.pkl', 'rb')\n",
+    "#predicted_svm = joblib.load(svm_model)"
    ]
   },
   {
@@ -4064,16 +4062,17 @@
    "source": [
     "# now let's create our model code\n",
     "\n",
-    "@app.route('/predict', methods=['POST'])\n",
-    "def predict():\n",
-    "        if request.method == 'POST':\n",
-    "            message=request.form['tweet']\n",
-    "            data=[tweet]\n",
-    "            prediction = classifier_svm.predict(data)\n",
-    "        return render_template('answer.html', results=prediction)\n",
+    "#@app.route('/predict', methods=['POST'])\n",
+    "#def predict():\n",
+    "#        if request.method == 'POST':\n",
+    "#            message=request.form['tweet']\n",
+    "#            data=[tweet]\n",
+    "#            transformed = data.apply(prepare, pipeline=crypto_pipeline1)\n",
+    "#            prediction = classifier_svm.predict(transformed)\n",
+    "#        return render_template('answer.html', results=prediction)\n",
     "    \n",
-    "if __name__ == '__main__':\n",
-    "        app.run(debug=True)"
+    "#if __name__ == '__main__':\n",
+    "#        app.run(debug=True)"
    ]
   },
   {
@@ -4092,7 +4091,10 @@
    "id": "8912bef0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# %tb\n",
+    "# this was used to traceback errors"
+   ]
   }
  ],
  "metadata": {
