Updated with nlp_app contents

--- a/ADS509_Team1_Final_Project.ipynb
+++ b/ADS509_Team1_Final_Project.ipynb
@@ -4029,11 +4029,11 @@
    ],
    "source": [
     "# package imports\n",
-    "from flask import Flask, render_template, url_for, request\n",
-    "import joblib\n",
-    "from joblib import dump, load\n",
-    "import flask_bootstrap\n",
-    "from flask_bootstrap import Bootstrap"
+    "# from flask import Flask, render_template, url_for, request\n",
+    "# import joblib\n",
+    "# from joblib import dump, load\n",
+    "# import flask_bootstrap\n",
+    "# from flask_bootstrap import Bootstrap"
    ]
   },
   {
@@ -4047,14 +4047,12 @@
     "# see https://flask.palletsprojects.com/en/2.2.x/quickstart/#a-minimal-application\n",
     "# reference for intiating minimal flask application\n",
     "app = Flask(__name__)\n",
-    "Bootstrap(app)\n",
     "\n",
     "# app.route turns python function into a Flask view function \n",
     "# this defines our \"home\" page that directs us to the page where we can enter a tweet\n",
     "@app.route('/')\n",
     "def question():\n",
-    "    #return render_template('question.html')\n",
-    "    return '<h1>Hello!</h1>'\n",
+    "    return render_template('question.html')\n",
     "    \n",
     "if __name__ == \"__main__\":\n",
     "        app.run(debug=True)"
@@ -4228,6 +4226,37 @@
     "# %tb\n",
     "# this was used to traceback errors"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d729087-3ed7-416d-b15a-45380a4d9c52",
+   "metadata": {},
+   "source": [
+    "Our notebook has accomplished writing 2 html files which would have been used in our final application"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdf057d9-d56d-4b7d-aa32-4bf51f3b7b4c",
+   "metadata": {},
+   "source": [
+    "A separate folder within the repo named \"nlp_app\" contains all the intermediary code in our attempt to deploy our classification model into an interactive app. In order to interact with the app, the following must be done:\n",
+    "1. Open the command line on your machine and change the directory to the nlp_app folder\n",
+    "2. Write \"Python app.py\" within the command line to initiate the app\n",
+    "3. Copy and paste the local URL generated within the command line to your browser\n",
+    "4. Enter the contents of the tweet within the tweet message box\n",
+    "5. Click the submission button\n",
+    "6. The resulting page (which is the answer.html file within the nlp_app folder) would have included the name of the cryptocurrency that the tweet most likely belonged to.\n",
+    "Note that while we were originally going to include additional output to display the top words within an affiliated topic model, this was not included in the final notebook as troubleshooting the original classification model within the application proved too time consuming, resulting in no time to implmement any form of topic modelling within the final application."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17a3fbeb-99cb-4f1d-b2b4-8539520d8f77",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
